--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,9 @@
           <li class="p-name">
             {%- if site.author -%}
               {{ site.author | escape }}
-            <!-- {%- else -%} -->
-              <!-- {{ site.title | escape }} -->
+            {%- else -%} -->
+              {{|escape}}
+<!--               {{ site.title | escape }} -->
             {%- endif -%}
             </li>
             {%- if site.email -%}
