--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
           <li class="p-name">
             {%- if site.author -%}
               {{ site.author | escape }}
-            {%- else -%} -->
+            {%- else -%}
               {{|escape}}
 <!--               {{ site.title | escape }} -->
             {%- endif -%}
