--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 <article class="post">
-
+<!-- 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
+  </header> -->
 
   <div class="post-content">
     {{ content }}
