--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
           <li class="p-name">
             </li>
             {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            <li><a class="u-email" href="mailto:{{ site.email }}"><svg class="svg-icon"><use xlink:href="{{ '../_includes/icon-email.svg' | relative_url }}"></use></svg> </a></li>
             {%- endif -%}
         </ul>
       </div>
